--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Author: Alex Fout
 Maintainer: fout.alex+foutr@gmail.com
 Description: I like plots and things to look a certain way. 
 	Now I can keep all these things in one place.
-License: CC BY-SA 2.0
+License: GNU General Public Liscence Version 3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
