--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: afr
 Type: Package
-Title: My attempt to make R my own!
+Title: Alex Fout R
 Version: 0.1.0
 Author: Alex Fout
-Maintainer: fout.alex+foutr@gmail.com
+Maintainer: Alex Fout <fout.alex+foutr@gmail.com>
 Description: I like plots and things to look a certain way. 
-	Now I can keep all these things in one place.
-License: GNU General Public Liscence Version 3
+    Now I can keep all these things in one place.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
